Bug 224427 - Get this when visiting the site: "Gtk-WARNING **: invalid cast from 'GtkSuperWin' to 'GtkWidget'" Patch contributed by Pavel Kankovsky <peak@argo.troja.mff.cuni.cz> r=caillon@gmail.com, sr=blizzard@mozilla.org